<resources>
    <string name="app_name">Atividade05</string>
    <string name="tvEntrada">Quantidade de dados:</string>
    <string name="tvFaces">Quantidade de lados:</string>
    <string name="d4">D4</string>
    <string name="d6">D6</string>
    <string name="d8">D8</string>
    <string name="d10">D10</string>
    <string name="d12">D12</string>
    <string name="d20">D20</string>
    <string name="d100">D100</string>
    <string name="gerar">Gerar</string>

    <string-array name="qtd_dados">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>