<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnGerar"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbD4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d4" />

        <RadioButton
            android:id="@+id/rbD6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d6" />

        <RadioButton
            android:id="@+id/rbD8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d8" />

        <RadioButton
            android:id="@+id/rbD10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d10" />

        <RadioButton
            android:id="@+id/rbD12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d12" />

        <RadioButton
            android:id="@+id/rbD20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d20" />

        <RadioButton
            android:id="@+id/rbD100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d100" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spQtdNum"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="449dp"
        app:layout_constraintBottom_toTopOf="@+id/btnGerar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEntrada" />

    <Button
        android:id="@+id/btnGerar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gerar"
        app:layout_constraintBottom_toTopOf="@+id/tvSaida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spQtdNum" />

    <TextView
        android:id="@+id/tvSaida"
        android:layout_width="343dp"
        android:layout_height="0dp"
        android:layout_marginBottom="122dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGerar" />

    <TextView
        android:id="@+id/tvEntrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="26dp"
        android:text="@string/tvEntrada"
        app:layout_constraintBottom_toTopOf="@+id/spQtdNum"
        app:layout_constraintStart_toStartOf="@+id/spQtdNum"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/tvFaces"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>